--- a/styles.css
+++ b/styles.css
@@ -1568,13 +1568,19 @@ video {
   }
 }
 
-@media (min-width: 1528px) {
-  .\32xl\:flex {
-    display: flex;
+@media (min-width: 1400px) {
+  .\31\.5xl\:h-96 {
+    height: 24rem;
   }
 
-  .\32xl\:h-96 {
-    height: 24rem;
+  .\31\.5xl\:w-96 {
+    width: 24rem;
+  }
+}
+
+@media (min-width: 1529px) {
+  .\32xl\:flex {
+    display: flex;
   }
 
   .\32xl\:h-72 {
